...
    <string name="example_url_placeholder">e.g. https://</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="qr_or_password_required">QR code badge or password required</string>
    <string name="password_not_set_error">Password is required before saving</string>
    <string name="done">Done</string>
    <string name="try_it">Try it</string>
    <string name="add_app">Add to school apps</string>
...
    <string name="lessons">Lessons</string>
    <string name="apps">Apps</string>
    <string name="home">Home</string>
    <string name="app">App</string>
    <string name="assignments">Assignments</string>
    <string name="assignment">Assignment</string>
    <string name="add_assignment">Add assignment</string>
    <string name="edit_assignment">Edit assignment</string>
    <string name="classes">Classes</string>
    <string name="clazz">Class</string>
    <string name="assigned_to">Assigned to</string>
    <string name="assign_to">Assign to</string>
    <string name="remove_from_class">Remove from class</string>
    <string name="manage_enrollments">Manage enrollments</string>
    <string name="report">Report</string>
    <string name="reports">Reports</string>
    <string name="select_app">Select app</string>
    <string name="enter_link">Enter link</string>
...
    <string name="invalid_url">Invalid app Url</string>
    <string name="loading">Loading</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="all">All</string>
    <string name="active">Active</string>
...
    <string name="already_have_account">I already have an account</string>
    <string name="add_my_school">Add my school</string>
    <string name="required_field">Required field</string>
    <string name="enter_one_field">If you need response, one of the field is required</string>
    <string name="login">Login</string>
...
    <string name="share_with_link_or_qr_code">Invite with link or QR code</string>">
    <string name="share_qr_code">Share QR code</string>">
    <string name="description">Description</string>">
    <string name="unspecified">Unspecified</string>
    <string name="phone_memory">Phone memory</string>
...
    <string name="title">Title</string>
    <string name="y_axis">Y Axis</string>
    <string name="subgroup_by">Subgroup by</string>
    <string name="chart_type">Chart type</string>
    <string name="time_range">Time range</string>
    <string name="filters">Filters</string>
    <string name="add_filter">Add Filter</string>
    <string name="add_series">Add Series</string>
    <string name="total_duration">Total Duration</string>
    <string name="average_duration">Average Duration</string>
...
    <string name="quantity_must_be_at_least_1">Quantity must be at least 1</string>
    <string name="untitled_report">Untitled Report</string>
    <string name="select_template">Select template</string>
    <string name="indicator_name">Indicator Name</string>
    <string name="sql">SQL</string>
    <string name="edit_filters">Edit Filters</string>
    <string name="blank_template">Blank Template</string>>

    <!-- Duration Metrics -->
...
    <!-- Score Metrics -->
    <string name="average_score">Average Score</string>
    <string name="total_score">Total Score</string>
    <string name="score">Score</string>

    <!-- Count Metrics -->
...

    <!-- Misc -->
    <string name="count">Count</string>
    <string name="invalid_report_format">invalid report format</string>
    <string name="invalid_report_config">invalid report config</string>
...

    <!-- Time Units -->
    <string name="day">Day</string>
    <string name="months">Months</string>
    <string name="weeks">Weeks</string>
    <string name="years">Years</string>
    <string name="weekly">Weekly</string>
    <string name="daily">Every working day</string>
    <string name="monthly">Monthly</string>
...
    <string name="last_30_days">Last 30 days</string>
    <string name="last_3_months">Last 3 months</string>
    <string name="last_week_date_range">Last week</string>
    <string name="last_two_week_date_range">Last two weeks</string>
    <string name="last_month_date_range">Last month</string>
...

    <!-- Chart Types -->
    <string name="bar_chart">Bar Chart</string>
    <string name="line_chart">Line Chart</string>

    <!-- X Axis Options -->
    <string name="year">Year</string>
    <string name="class_name">Class name</string>
    <string name="gender_literal">Gender</string>

...

    <!-- Actions -->
    <string name="delete">Delete</string>

    <string name="accounts">Accounts</string>
...
    <string name="continue_using_fingerprint_or">Continue using fingerprint, biometrics, or device PIN</string>

    <string name="people">People</string>
    <string name="person">Person</string>
    <string name="back">Back</string>
...

    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="assignment_tasks">Assignment tasks</string>
    <string name="tasks">Tasks</string>
...
    <string name="failed">Failed</string>

    <string name="due_date">Due date</string>
    <string name="family_members">Family members</string>
    <string name="family_member">Family member</string>
...
    <string name="invalid_link">Invalid link</string>
    <!-- developer note key has suffix to avoid conflict with extension functions -->
    <string name="average_str">Average</string>
    <string name="no_student_data_available">No student data available</string>
    <string name="unknown_class">Unknown Class</string>
    <string name="task_completed">task completed</string>
    <string name="task">Task</string>
    <string name="student_completed">student completed</string>
    <string name="menu">Menu</string>
...
    <string name="indicator_score_total_desc">The sum of all points earned by students across multiple assessments or cumulative performance measurements</string>

    <string name="indicator_number_of_unique_users">Number of Unique Users</string>
    <string name="indicator_number_of_unique_users_desc">The count of distinct users who engaged with the learning content during the specified time period</string>

...
